[package]
name = "tlv_parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library to Parse to tlv messages"
repository = "https://github.com/HosseinAssaran/TLV-Parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
